# binance

./: Cargo.toml
src/: lib.rs
src/common/: time.rs
src/market/: client.rs  error.rs
src/spot/: client.rs  error.rs  mod.rs
src/strategy/: grid.rs  limit.rs  mod.rs  percentage.rs
src/treasurer/: mod.rs
tests/: mock_price.rs
