[package]
name = "rust_binance"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = "0.4"

binance-rs-async = "1.3"
rust_decimal = "1.34"


[dev-dependencies]
tracing-test = "0.2"
regex = { version = "1.10", features = ["unicode-case"] }
